--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Xem phim miễn phí, nhanh, chất lượng cao tại PHIMCHOEM 🎬">
   <meta property="og:title" content="PHIMCHOEM 🎬 - Xem phim miễn phí">
-  <meta property="og:image" content="https://i.imgur.com/8Q1ZtUO.png">
+  <meta property="og:image" content="https://i.postimg.cc/3rssPTGB/z7096090219629-194c8d87c8ff9dd511eaeb315fcf9522.jpg">
 
   <title>PHIM CHO EM 🎬</title>
   <style>
@@ -367,3 +367,4 @@
   </script>
 </body>
 </html>
+
